kyverno/policies/ingress/external-dns-domain-label-length.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: external-dns-domain-label-length
  annotations:
    policies.kyverno.io/title: External-DNS Ingress Length Limit
    policies.kyverno.io/category: External-DNS
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      External-DNS uses TXT records to flag ownership of DNS records. For that
      purpose it uses the following domain label is used
      `<prefix>-<type>-<domain-label>`. There is an RFC limitation of 63 chars
      per DNS domain label which should be respected by the generated
      TXT records as well. Even though the 63 chars limit is for all labels,
      let's only check the one edited via external-DNS since the rest should be
      problematic regardless.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
  matchConditions:
    # This annotation will instruct external-DNS to create CNAME type records
    - name: has-external-dns-target
      expression: "'external-dns.alpha.kubernetes.io/target' in object.metadata.?annotations.orValue({})"
  variables:
    - name: prefix
      expression: "'infra'"
  validations:
    - expression: >-
        object.spec.?rules.orValue([]).all(rule,
          size(variables.prefix + '-cname-' + rule.?host.orValue('').split('.')[0]) <= 63
        )
      message: "External-DNS TXT record domain label must be <= 63 chars"
